--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.12.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
+    "react-dev-utils": "^10.0.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
     "react-router-hash-link": "^1.2.2",
-    "react-scripts": "3.3.1"
+    "react-scripts": "^4.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
